# nightshift

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.nightshift/: context.md
.nightshift/skills/nightshift-handoff/: SKILL.md
docs/: provider-control.md
src/nightshift/: __init__.py  cli.py  config.py  context.py  doctor.py  errors.py  init.py  plan.py  providers.py  repos.py  reservations.py  tui.py  workers.py
tests/: conftest.py  test_cli.py  test_cli_help.py  test_config.py  test_doctor.py  test_init.py  test_plan.py  test_providers.py  test_repos.py  test_reservations.py  test_workers.py
