[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "nightshift"
version = "0.1.0"
description = "Spend surplus AI subscription usage on explicit repo chores and draft PRs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0",
]

[project.scripts]
nightshift = "nightshift.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "pytest>=8",
]
